# metashape-scripts

./: detect_objects.py  pyproject.toml  read_altitude_from_DJI_meta.py  remove_assets.py
data/cs/: notes.txt
data/cs/msk/: EPSG6335401 - МСК-54 зона 1 Новосибирская область.prj  EPSG6335401 - МСК-54 зона 1 Новосибирская область.proj4  EPSG6335402 - МСК-54 зона 2 Новосибирская область.prj  EPSG6335402 - МСК-54 зона 2 Новосибирская область.proj4  EPSG6335403 - МСК-54 зона 3 Новосибирская область.prj  EPSG6335403 - МСК-54 зона 3 Новосибирская область.proj4  EPSG6335404 - МСК-54 зона 4 Новосибирская область.prj  EPSG6335404 - МСК-54 зона 4 Новосибирская область.proj4
src/: bounding_box_to_coordinate_system.py  dar_workflow.py  general_workflow.py
