[tool.poetry]
name = "metashape-scripts"
version = "0.1.0"
description = ""
authors = ["IgorKilipenko <igorkili@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
metashape = {path = "pkgs/Metashape-2.0.3-cp37.cp38.cp39.cp310.cp311-none-win_amd64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
